mwd26-integration/source-app/main/default/objects/Sync_Notification__e/Sync_Notification__e.object-meta.xml
<CustomObject>
    <description>MWD26 demo — Platform Event (pub/sub) announcing the outcome of a Back Office sync. Standalone example; not wired into the LWC/Queueable/Flow paths.</description>
    <label>Sync Notification</label>
    <pluralLabel>Sync Notifications</pluralLabel>
</CustomObject>