mwd26-integration/source-app/main/default/objects/Sync_Notification__e/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <label>External Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>