mwd26-integration/source-app/main/default/objects/Sync_Notification__e/fields/Integration_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request_Id__c</fullName>
    <label>Integration Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>