mwd26-integration/source-app/main/default/objects/Sync_Notification__e/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <label>Request Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>